# structural_analysis

./: Assignment_1_genAIuse.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
Assignment1/.github/workflows/: run-test-and-upload-coverage.yaml
Assignment1/Bisection_Method/: README.md  function.py  test_error.py  tutorial.ipynb
Assignment1/Bisection_Method/tests/: test_function.py
Assignment1/Material_model/: README.md  test_hardening.py  tutorial.ipynb
Assignment1/Material_model/src/: ihardening.py
Assignment1/Material_model/tests/: test_hardening.py
Assignment1/Newtons_Method/: MultiRoot.py  README.md  function.py  test_error.py  tutorial.ipynb
Assignment1/Newtons_Method/src/: MultiRoot.py
Assignment1/Newtons_Method/tests/: test_error.py
Assignment1/Tutorials/: Hardening_Tutorial.ipynb  bisection_tutorial.ipynb
Assignment1/src/: MultiRoot.py
Assignment1/src/Me700_hw1.egg-info/: SOURCES.txt
Assignment1/tests/: test_bisection.py  test_newtons.py
part1/: run.py  src.py  test_src.py
src/: khardening.py
src/Assignment1.egg-info/: PKG-INFO  SOURCES.txt
src/Me700_hw1.egg-info/: PKG-INFO  requires.txt  top_level.txt
tests/: test_hardening.py
