[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Assignment1"
version = "0.0.0"
authors = [
  { name="Michael Landuyt", email="mlanduyt@bu.edu" },
]
description = "Assignment 1"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.23.2",
    "pytest>=7.1.2",
    "pytest-cov>=3.0.0",
    "scipy",
    "sympy"
]

[project.urls]
"Homepage" = "https://github.com/mlanduyt/Assignment1"
"Bug Tracker" = "https://github.com/mlanduyt/Assignment1/issues"
